Add import export. Fix get_needed
